<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Annotations Video</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ajouter">Ajouter Video</string>
    <string name="text_nom">Nom</string>
    <string name="text_commentaire">Commentaire</string>
    <string name="text_tcdm">00</string>
    <string name="text_tcds">00</string>
    <string name="text_tcfm">05</string>
    <string name="text_tcfs">00</string>
    <string name="title_activity_annotation">Annotations Video</string>
    <string name="bouton_valider">Valider</string>
    <string name="text_nouvelle_annotation">Nouvelle Annotation</string>
    <string name="bouton_debut_annotation">Debut</string>
    <string name="bouton_fin_annotation">Fin</string>
    <string name="chooser_title">Choisir</string>
    <string name="text_index">Annotations Video</string>
    <string name="ajouter_video">ADD</string>
    <string name="title_activity_annotation_activity_streaming">Annotations Video</string>
    <string name="list_annotations"></string>
    <string name="title_activity_list_annotation">Annotations Video</string>
    <string name="title_activity_quadrant">Quadrant</string>
    <string name="creerQuadrant">Quadrant</string>
    <string name="valider_quadrant">OK</string>
    <string name="title_activity_quadrant_v2">QuadrantV2Activity</string>
    <string name="entrer_traits">Traits</string>
    <string name="title_activity_traits_dialog">TraitsDialog</string>
    <string name="valider_traits">Valider</string>
    <string name="annuler_traits">Annuler</string>
    <string name="volonte">Volonte </string>
    <string name="imagination">Imagination </string>
    <string name="perception">Perception </string>
	<string name="memoire">Memoire </string>
	<string name="entrainement">Entrainement </string>
	<string name="refresh_main">Rafraichir</string>
</resources>