<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnotationActivity" >

    <VideoView
        android:id="@+id/videoMin"
        android:layout_width="640dp"
        android:layout_height="352dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/videoMin" >

        <TextView
            android:id="@+id/text_nouvelle_annotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/text_nouvelle_annotation" />

        <EditText
            android:id="@+id/textNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nouvelle_annotation"
            android:hint="@string/text_nom"
            android:inputType="text" />

        <EditText
            android:id="@+id/textCommentaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNom"
            android:hint="@string/text_commentaire"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bouton_debut_annotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCommentaire"
            android:text="@string/bouton_debut_annotation" />

        <EditText
            android:id="@+id/timecodeDebutMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCommentaire"
            android:layout_toRightOf="@+id/bouton_debut_annotation"
            android:hint="@string/text_tcdm"
            android:inputType="time" />

        <EditText
            android:id="@+id/timecodeDebutSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCommentaire"
            android:layout_toRightOf="@+id/timecodeDebutMin"
            android:hint="@string/text_tcds"
            android:inputType="time" />

        <Button
            android:id="@+id/bouton_fin_annotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_debut_annotation"
            android:text="@string/bouton_fin_annotation" />

        <EditText
            android:id="@+id/timecodeFinMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_debut_annotation"
            android:layout_toRightOf="@+id/bouton_fin_annotation"
            android:hint="@string/text_tcfm"
            android:inputType="time" />

        <EditText
            android:id="@+id/timecodeFinSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_debut_annotation"
            android:layout_toRightOf="@+id/timecodeFinMin"
            android:hint="@string/text_tcfs"
            android:inputType="time" />

        <Button
            android:id="@+id/validerAnnotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bouton_fin_annotation"
            android:text="@string/bouton_valider" />

        <Button
            android:id="@+id/creerQuadrant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/validerAnnotation"
            android:text="@string/creerQuadrant" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/videoMin" >

        <ListView
            android:id="@+id/list_annotation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </RelativeLayout>

</RelativeLayout>